<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FastReader</string>
    <string name="action_settings">Settings</string>
    <string name="select_epub">Touch to Select .epub</string>
    <string name="touch_to_start">Touch to Start</string>
    <string name="unsupported_file">Unsupported file.</string>
    <string name="set_wpm">Set WPM</string>
    <string name="whoa_dude">Whoaaa dude</string>
    <string name="theme">Toggle Light/Dark Theme</string>
    <string name="open_epub">Open epub</string>
    <string name="community">Community</string>
    <string name="loading">Loading…</string>
    <string name="select_chapter">Select Chapter</string>
    <string name="dialog_donate_msg">Open Source developers turn love and money from their community into honest, quality software. Buy us a beer or contribute code to this project!</string>
    <string name="dialog_donate_title">Show some Love?</string>
    <string name="dialog_donate_positive_btn">Donate Money!</string>
    <string name="dialog_donate_neutral_btn">Contribute Code!</string>
    <string name="dialog_donate_complete_title">You Rock.</string>
    <string name="dialog_donate_complete_positive_btn">I know</string>
    <string name="hello_world">Hello world!</string>
    <string name="pull_for_history">Pull down for history</string>
    <string name="donate">Donate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="pref_title_sharing">Sharing</string>
    <string name="pref_summary_sharing">%s submit articles I share to Glance from external applications (e.g: my browser) to the Recent and Popular Feeds, which are visible to all users. Only the article URL and page Title is transmitted. No identifying information is transmitted.</string>
    <string name="pref_dialog_title_sharing">Sharing mode</string>
    <string name="spritz_loading"> \ | / - \ | /  Load It Harder  \ | / - \ | /  Load it Better  \ | / - \ | /  Load It Faster  \ | / - \ | /  Load Us Stronger</string>
    <string name="spritz_error">Error Error Error Error Error Error Error Error Error Error Sorry about that Error Error Error Error Error Error Error Error Error Error Maybe this message is an</string>
    <string name="dialog_on_boarding">FastReader is a speed reader for web pages. \n\n<b>Sharing</b> \n\nIf you\'d like to anonymously submit articles you read for inclusion in the Popular and Recent Feeds check out the Settings menu (Gear icon in the Action Bar).  \n\n<b>Integrates with your Browser</b> \n\nYou can share URLs to FastReader from your favorite browser\'s Share menu.  \n\n<b>Epub book support</b> \n\nTouch the book icon in the Action Bar to open an e-book in the Epub format (.epub).</string>
    <string name="share_dialog_message">Submit this article for inclusion in the Recent and Popular feeds? If you liked it, let other readers know!</string>
    <string name="share_dialog_title">Share this Read?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="config_key_wpm">config_key_wpm</string>
    <string name="config_title_wpm">WPM</string>
    <string name="config_desc_wpm">Enter the WPM to flash content</string>
    <string name="title_activity_config">Configuration</string>
    <string name="pref_key_word">pref_key_word</string>
    <string name="toggle_speed_fast">Fast</string>
    <string name="toggle_speed_slow">Slow</string>
    <string name="config_cat_wpm">WPM</string>
    <string name="config_wpm_fast">Fast</string>
    <string name="config_wpm_fast_desc">The WPM to use for high speed</string>
    <string name="config_wpm_fast_key">config_wpm_fast</string>
    <string name="config_wpm_fast_default">600</string>
    <string name="config_wpm_slow">Slow</string>
    <string name="config_wpm_slow_desc">The WPM to use for slow speed</string>
    <string name="config_wpm_slow_key">config_wpm_slow</string>
    <string name="config_wpm_slow_default">300</string>
    <string name="config_cat_dev">Development</string>
    <string name="config_dev_source">Use dummy article</string>
    <string name="config_dev_source_desc">Check this option to use dummy article content instead of using a webservice</string>
    <string name="config_dev_source_key">config_dev_source</string>
    <string name="error_could_not_parse_uri">Could not parse URI: </string>
    <string name="error_unsupported_uri">Unsupported URI: </string>
    <string name="playButton_contentDescription">Press to begin playback</string>
</resources>
