<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/config_cat_wpm">

        <EditTextPreference
            android:defaultValue="@string/config_wpm_fast_default"
            android:key="@string/config_wpm_fast_key"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/config_wpm_fast_desc"
            android:title="@string/config_wpm_fast" />
        <EditTextPreference
            android:defaultValue="@string/config_wpm_slow_default"
            android:key="@string/config_wpm_slow_key"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/config_wpm_slow_desc"
            android:title="@string/config_wpm_slow" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/config_cat_dev">

    </PreferenceCategory>
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/config_dev_source_key"
        android:summary="@string/config_dev_source_desc"
        android:title="@string/config_dev_source" />

</PreferenceScreen>