<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="jb.fastreader.rsvp.Fragment">

    <TextView
        android:id="@+id/contentTitle"
        style="@style/SubduedTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/inner_margin"
        android:layout_marginEnd="@dimen/inner_margin"
        android:ellipsize="marquee"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/contentSubtitle"
        style="@style/UltraSubduedTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contentTitle"
        android:layout_alignStart="@id/contentTitle"
        android:layout_alignEnd="@+id/contentTitle"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:textSize="14sp" />

    <jb.fastreader.rsvp.RSVPTextView
        android:id="@+id/RSVPTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentSubtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:gravity="start"
        android:keepScreenOn="true"
        android:textSize="30sp"
        android:typeface="monospace"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/loadingIcon"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:visibility="invisible"
        android:layout_alignTop="@+id/RSVPTextView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/rewindCurrentParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="80dp"
        android:maxWidth="90dp"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:src="@drawable/left3"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/RSVPTextView"
        android:layout_alignStart="@+id/contentTitle" />

    <ImageView
        android:id="@+id/rewindPreviousSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:visibility="visible"
        android:src="@android:drawable/ic_media_rew"
        android:layout_alignTop="@+id/rewindCurrentParagraph"
        android:layout_toEndOf="@+id/rewindCurrentParagraph" />

    <ImageView
        android:id="@+id/rewindCurrentSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:visibility="visible"
        android:src="@drawable/left1"
        android:layout_alignTop="@+id/rewindPreviousSentence"
        android:layout_toEndOf="@+id/rewindPreviousSentence" />

    <ImageView
        android:id="@+id/playButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/playButton_contentDescription"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:minHeight="80dp"
        android:minWidth="80dp"
        android:src="@android:drawable/ic_media_play"
        android:layout_alignTop="@+id/rewindCurrentSentence"
        android:layout_toEndOf="@+id/rewindCurrentSentence" />

    <ProgressBar
        android:id="@+id/statusVisual"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/inner_margin"
        android:layout_marginRight="@dimen/inner_margin"
        android:indeterminate="false"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/statusText"
        style="@style/SubduedTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/statusVisual"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/inner_margin"
        android:layout_marginStart="@dimen/inner_margin"
        android:clickable="true"
        android:textColor="@color/chapter_text_color"
        android:textSize="22sp" />

    <Switch
        android:id="@+id/speedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/statusVisual"
        android:layout_alignEnd="@+id/statusVisual"
        android:checked="true"
        android:showText="true"
        android:textOff="@string/toggle_speed_slow"
        android:textOn="@string/toggle_speed_fast" />

</RelativeLayout>
